--- a/packages/server/TODO
+++ b/packages/server/TODO
@@ -5,7 +5,7 @@ Principais funcionalidades:
     ✔ Entrar em um desafio (gerando uma ordem de questões) @done(21-07-12 17:41)
     ☐ Finalizar um desafio
   Questions:
-    ☐ Visualizar uma questão (liberar somente a questão atual do desafio em que o usuário se inscreveu)
+    ✔ Visualizar uma questão (liberar somente a questão atual do desafio em que o usuário se inscreveu) @done(21-07-12 18:07)
     ☐ Responder uma questão
       Retornar se está correto e o id da próxima questão
       Além de somar a pontuação do usuário, com base no peso do desafio e no número de questões
