--- a/packages/server/TODO
+++ b/packages/server/TODO
@@ -3,10 +3,10 @@ Principais funcionalidades:
     ✔ Listagem de desafios @done(21-07-11 19:37)
     ✔ Visualizar detalhes de um desafio @done(21-07-11 21:46)
     ✔ Entrar em um desafio (gerando uma ordem de questões) @done(21-07-12 17:41)
-    ☐ Finalizar um desafio
+    ✔ Finalizar um desafio @done(21-07-12 20:04)
   Questions:
     ✔ Visualizar uma questão (liberar somente a questão atual do desafio em que o usuário se inscreveu) @done(21-07-12 18:07)
-    ☐ Responder uma questão
+    ✔ Responder uma questão @done(21-07-12 20:04)
       Retornar se está correto e o id da próxima questão
       Além de somar a pontuação do usuário, com base no peso do desafio e no número de questões
     ☐ Pular uma questão
