--- a/packages/server/TODO
+++ b/packages/server/TODO
@@ -9,7 +9,7 @@ Principais funcionalidades:
     ✔ Responder uma questão @done(21-07-12 20:04)
       Retornar se está correto e o id da próxima questão
       Além de somar a pontuação do usuário, com base no peso do desafio e no número de questões
-    ☐ Pular uma questão
+    ✔ Pular uma questão @done(21-07-12 22:50)
   Leaderboard:
     ☐ Listar o placar de líderes
     ☐ Visualizar as estatísticas detalhadas de um usuário
